<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" 
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    android:baselineAligned="false"
    android:background="@color/accent_white"
    android:id="@+id/proAccountView"
    tools:context=".ProAccountActivity">

    <fragment
        xmlns:lantern="http://schemas.android.com/apk/res-auto"
        android:id="@+id/titlebar_fragment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        class="org.lantern.fragment.TitleBar"
        lantern:backgroundColor="@drawable/nav_background_white"
        lantern:titleText="@string/pro_account_header"/>

    <LinearLayout
        android:id="@+id/invite_bottom_sheet"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/accent_white">

        <ImageView
            android:id="@+id/account_management"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="28dp"
            android:paddingBottom="28dp"
            android:src="@drawable/account_management"/>

        <RelativeLayout
            android:id="@+id/verifiedEmailSection"
            android:layout_gravity="center"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/verifiedEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/email_address"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/emailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textSize="14sp"
                android:layout_alignParentRight="true"  
                android:textColor="@color/pink"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_gravity="center"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/verifiedNumberSection"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/deviceName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="sans-serif-medium"
                android:text=""
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/logoutBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:onClick="logout"
                android:clickable="true"
                android:focusable="true"
                android:textAllCaps="true"
                android:text="@string/logout"
                android:textSize="14sp"
                android:layout_alignParentRight="true"  
                android:textColor="@color/pro_blue_color"/>

        </RelativeLayout>


        <TextView
            android:id="@+id/devicesAuthorized"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textSize="14sp"          
            android:textColor="@color/black"
            android:paddingTop="20dp"
            android:text="@string/devices_authorized"
            />

        <LinearLayout
            android:id="@+id/deviceList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:gravity="right"
            android:layout_below="@+id/devicesAuthorized"
            android:layout_gravity="right"
            android:orientation="vertical" />  

        <TextView
            android:id="@+id/proAccountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:paddingTop="20dp"
            android:lineSpacingExtra="10dp"
            android:text=""
            android:textSize="14sp"
            android:paddingBottom="20dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/freeMonthsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/proAccountText"
            android:visibility="gone"

            android:fontFamily="sans-serif"
            android:paddingTop="20dp"
            android:lineSpacingExtra="10dp"
            android:text=""
            android:textSize="14sp"
            android:paddingBottom="20dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/renewProBtn"
            android:layout_height="36dp"
            android:layout_width="216dp"
            android:text="@string/renew_pro_account"
            android:fontFamily="sans-serif-medium" 
            android:textSize="14sp"
            android:elevation="2dp"
            android:minHeight="48dp"
            android:textAllCaps="true"
            android:textColor="@color/pink"
            android:clickable = "true"
            android:background="@drawable/text_invite"
            android:layout_centerInParent="true"
            android:onClick="renewPro" />

        <TextView
            android:id="@+id/sendLogsBtn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textSize="14sp"
            android:clickable="true"
            android:text="@string/send_us_your_logs"
            android:textColor="@color/black"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center" 
            android:gravity="center"
            android:background="@null"
            android:layout_centerHorizontal="true"
            android:onClick="sendLogs"/>

    </LinearLayout>
</LinearLayout>
